data/derived/comb/progs/unify/prog1381.ml.out
Characters 120-121:
  else additivePersistence (sumList n);;
                                    ^
Error: This expression has type int but an expression was expected of type
         int list
